--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^7.1.3",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
